# opguia

./: .gitignore  CLAUDE.md  DESIGN.md  README.md  main.py  pyproject.toml  release.sh  requirements.txt
opguia/: __init__.py  __main__.py  _native_window.py  app.py  cli.py  client.py  native.py  scanner.py  settings.py  storage.py  tunnel.py  ui_base.py  utils.py
opguia/components/: detail_panel.py  node_rows.py  tree_view.py  watch_panel.py
opguia/pages/: browse.py  connection.py
opguia/pages/browse/: detail_panel.py  page.py  write_form.py
opguia/pages/connection/: page.py
releases/: v1.0.0.md  v1.0.1.md  v1.0.2.md  v1.0.3.md  v1.0.4.md
