[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opguia"
dynamic = ["version"]
description = "Dead simple OPC UA browser"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10,<3.14"
authors = [
    { name = "Kyle" },
]
keywords = ["opcua", "opc-ua", "browser", "scada", "plc"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: Manufacturing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator",
]
dependencies = [
    "asyncua>=1.0.0",
    "loguru>=0.7",
    "nicegui>=1.4.0",
    "platformdirs>=3.0",
    "pyperclip>=1.8",
    "pywebview>=4.0",
]

[project.scripts]
opguia = "opguia.app:run"
opguia-cli = "opguia.cli:main"

[project.urls]
Homepage = "https://github.com/kyle/opguia"

[tool.hatch.version]
path = "opguia/__init__.py"
